--- a/extract_keypoints_from_multiple_videos.ipynb
+++ b/extract_keypoints_from_multiple_videos.ipynb
@@ -5,7 +5,7 @@
    "id": "4605d7a4",
    "metadata": {},
    "source": [
-    "# Define paths and store he list of videos and jsons in arrays"
+    "# Define paths and store the list of videos and jsons in arrays"
    ]
   },
   {
